<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="label_browse">Browse</string>
    <string name="hint_enter_url">Enter URL</string>
    <string name="text_choose">Choose a menu option...</string>
    <string name="title_browse_to">Browse To</string>
    <string name="title_photo">Take a Photo</string>
    <string name="title_contacts">Get a Contact</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_dial">Dial the Phone</string>
    <string name="label_take_photo">Take a Photo</string>
    <string name="label_pick_a_contact">Pick a Contact</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="label_dial_phone">Dial The Phone</string>
    <string name="hint_enter_phone_number">Enter a Phone Number</string>
    <string name="message_call_permission_granted">Call Permission Granted.</string>
    <string name="message_call_permission_denied">Call Permissions Denied.</string>
    <string name="title_pick_browser">Pick a Browser, Yo</string>
    <string name="label_bad_intent">Browse With Bad Intent</string>
    <string name="message_no_activities">No Activities Match!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
