<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BrowseToActivity">

    <Button
        android:id="@+id/button_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_browse"
        android:layout_centerInParent="true"
        android:onClick="browseToUrl"
        />

    <EditText
        android:id="@+id/edit_text_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_above="@id/button_browse"
        android:hint="@string/hint_enter_url"
        />

    <Button
        android:id="@+id/button_bad_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_bad_intent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_browse"
        android:onClick="badIntent"
        />

</RelativeLayout>